--- a/ems-springboot/src/main/resources/application.yml
+++ b/ems-springboot/src/main/resources/application.yml
@@ -9,3 +9,7 @@ spring:
     url: jdbc:mysql://localhost:3306/ems?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8
     username: root
     password: AS3650
+
+mybatis:
+  type-aliases-package: com.chen.entity
+  mapper-locations: classpath:mybatis/mapper/*.xml
