--- a/ems/package.json
+++ b/ems/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "0.21.1",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.1-beta.20",
     "element-ui": "^2.14.1",
+    "moment": "^2.29.1",
     "vue": "^3.0.0",
+    "vue-axios": "3.2.2",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
